# alfie_automl_engine

./: .env.template  .gitignore  404.html  Dockerfile  README.md  app copy.py  app.py  conftest.py  docker-compose.yml  entrypoint.sh  ideas.md  index.html  main.py  mk_sample_data.sh  mkdocs.yml  objects.inv  old_app.py  presentation_utils.ipynb  pyproject.toml  pytest.ini  requirements.txt  test_services.py  test_services.sh  test_services_docker.sh  testing.ipynb  testng.ipynb  ui.py
.github/workflows/: black.yml  pages.yml  testing.yml
1750680497.847847/: metadata.json
Architecture diagrams/: ALFIE_AutoML_architecture.drawio  Intent_recog_action.drawio  model_data_registry.drawio
Presentations/1stGA/: TUE_3.4.pptx  TUE_4.2.pptx  TUE_Workshop.pptx
Presentations/Architecture diagrams/: ALFIE_AutoML_architecture.drawio  ALFIE_AutomlEngine_overview.drawio  Hyperparamsearch.drawio  Intent_recog_action.drawio
api/automlplus/: index.html
api/core/: index.html
api/tabular_automl/: index.html
api/vision_automl/: index.html
app/: Dockerfile  __init__.py  docker_compose.yaml
app/automlplus/: imagetools.py  main.py  utils.py
app/core/: chat_handler.py  utils.py
app/general_inference_tools/: main.py  modules.py  testing_hf.ipynb
app/tabular_automl/: Dockerfile  db.py  main.py  models.py  modules.py  services.py
app/vision_automl/: Dockerfile  main.py  models.py  utils.py
app/website_accessibility/: Dockerfile  main.py  modules.py  services.py  utils.py
autodw/: index.html
autogluon_output/: learner.pkl  metadata.json
autogluon_output/logs/: predictor_log.txt
autogluon_output/models/: trainer.pkl
automl_engine/: chat_handler.py  models.py  website_accessibility.py
automl_engine/pipelines/: automltabular.py  general_llm_question.py  models.py  website_accessibility.py
automl_engine/prompt_templates/: build_chunk_prompt.txt  chunk_result.txt  classify_intent.txt
docker_instructions/: index.html
docs/: autodw.md  docker_instructions.md  index.md  installation.md  loading_model.md  running_the_services.md  testing.md
docs/api/: automlplus.md  core.md  tabular_automl.md  vision_automl.md  (+1 more)
installation/: index.html
loading_model/: index.html
old_src/: chat_handler.py  file_handler.py  main.py  session_state_handler.py  testing.ipynb  ui.py
running_the_services/: index.html
search/: search_index.json
src/: __init__.py  agent.py  app.py  chat_handler.py  file_handler.py  pipeline_manager.py  session_state_handler.py  streamlit_ui_handler.py  tasks.py
templates/: index.html
testing/: index.html
tests/: __init__.py
ui/: streamlit_handler.py
(+102 files in other folders)
