[project]
name = "alfie-automl-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "nest-asyncio>=1.6.0",
    "ollama>=0.5.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-docx>=1.2.0",
    "ruff>=0.12.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
]
