[project]
name = "alfie-automl-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.3.1",
    "black>=25.1.0",
    "huggingface-hub>=0.33.0",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "lightning>=2.5.1.post0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocstrings[python]>=0.30.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.5.1",
    "onnx>=1.19.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-docx>=1.2.0",
    "ruff>=0.12.0",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "textblob>=0.18.0.post0",
    "textstat>=0.7.7",
    "timm>=1.0.3",
    "uvicorn>=0.35.0",
]
