[project]
name = "alfie-automl-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogluon>=1.3.1",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "huggingface-hub>=0.33.0",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "lightning>=2.5.1.post0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.5.1",
    "onnx>=1.19.0",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "ruff>=0.12.0",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "textblob>=0.18.0.post0",
    "textstat>=0.7.7",
    "timm>=1.0.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "urllib3>=2.4.0",
    "uvicorn>=0.35.0",
    "peft>=0.17.1",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.1.1",
    "openai>=2.2.0",
    "azure-ai-inference>=1.0.0b9",
    "json5>=0.12.1",
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocstrings[python]>=0.30.0",
]
